[gd_scene format=3 uid="uid://bis6no56o3u08"]

[ext_resource type="Script" uid="uid://bpjbaktxmcibh" path="res://scripts/world_editor.gd" id="1_xhvx2"]
[ext_resource type="PackedScene" uid="uid://dsj0oxt3t4gyc" path="res://scenes/room_template.tscn" id="2_hi0jt"]
[ext_resource type="Script" uid="uid://ckwah65n4b8u3" path="res://scripts/background.gd" id="5_d3wfe"]

[node name="WorldEditor" type="Control" unique_id=2144105472]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xhvx2")

[node name="Point" type="Panel" parent="." unique_id=519834216]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=60455042]

[node name="Panel" type="PanelContainer" parent="CanvasLayer" unique_id=172385485]
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 1.0
offset_right = 129.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel" unique_id=1238418424]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer" unique_id=1804614918]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer" unique_id=1137870396]
layout_mode = 2
text = "Rooms"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer" unique_id=1469009487]
layout_mode = 2
alignment = 1

[node name="NewRoom" type="Button" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer" unique_id=1781296342]
layout_mode = 2
text = "New Room"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer" unique_id=135973953]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="RoomBox" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/ScrollContainer" unique_id=1275095171]
layout_mode = 2
size_flags_horizontal = 3

[node name="RoomTemplate" parent="CanvasLayer/Panel/MarginContainer/VBoxContainer/ScrollContainer/RoomBox" unique_id=1991525890 instance=ExtResource("2_hi0jt")]
layout_mode = 2

[node name="LineName" type="CenterContainer" parent="CanvasLayer" unique_id=37630020]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 178.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameSelect" type="PanelContainer" parent="CanvasLayer/LineName" unique_id=106490675]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/LineName/NameSelect" unique_id=2024045214]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LineName/NameSelect/MarginContainer" unique_id=401787931]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/LineName/NameSelect/MarginContainer/VBoxContainer" unique_id=1904338616]
layout_mode = 2
text = "Enter Shape Name"

[node name="NameLine" type="LineEdit" parent="CanvasLayer/LineName/NameSelect/MarginContainer/VBoxContainer" unique_id=1856206942]
layout_mode = 2
placeholder_text = "Name"
alignment = 1

[node name="SubmitName" type="Button" parent="CanvasLayer/LineName/NameSelect/MarginContainer/VBoxContainer" unique_id=329137627]
layout_mode = 2
text = "Submit"

[node name="Camera2D" type="Camera2D" parent="." unique_id=85910698]

[node name="Panel" type="Panel" parent="." unique_id=702193669]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="Node2D" parent="." unique_id=79824509]
script = ExtResource("5_d3wfe")

[node name="WallDialog" type="FileDialog" parent="." unique_id=805068704]
title = "Open a File"
initial_position = 4
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg")
use_native_dialog = true

[node name="FloorDialog" type="FileDialog" parent="." unique_id=1721872763]
title = "Open a File"
initial_position = 4
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg")
use_native_dialog = true

[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/VBoxContainer/HBoxContainer/NewRoom" to="." method="_on_new_room_pressed"]
[connection signal="pressed" from="CanvasLayer/LineName/NameSelect/MarginContainer/VBoxContainer/SubmitName" to="." method="_on_submit_name_pressed"]
[connection signal="file_selected" from="WallDialog" to="." method="_on_wall_dialog_file_selected"]
[connection signal="file_selected" from="FloorDialog" to="." method="_on_floor_dialog_file_selected"]
